increase z-index, fixes #12

--- a/app/styles/ember-searchable-select/style.scss
+++ b/app/styles/ember-searchable-select/style.scss
@@ -84,7 +84,7 @@ $searchable-select-item-bg--hover: #f6f6f6;
     position: absolute;
     top: 100%;
     left: 0;
-    z-index: 2;
+    z-index: 20;
     width: 100%;
     background: #fff;
     border: 1px solid #D7D7D7;
